small alignment changes and also fixed the issue where the activity is listed after successful installation

--- a/src/client/flogo/flow/task-add-new/task-add.component.less
+++ b/src/client/flogo/flow/task-add-new/task-add.component.less
@@ -5,10 +5,25 @@
   .uxpl-dropdown-container();
   position: relative;
   padding: 10px 10px 0;
+  min-width: 250px;
+  height: 300px;
 }
 
 .search {
   text-align: center;
+}
+
+.search-input {
+  width: 100%;
+}
+
+.scrollable-content {
+  height: 240px;
+  overflow-y: auto;
+}
+
+.empty-text {
+  margin: 1em;
 }
 
 .activity-list {
